better responsive behavior on mobile dev & fixed displaying results

--- a/style2.css
+++ b/style2.css
@@ -2,12 +2,17 @@
     display: flex;
     text-align: center;
     margin: 50px 0;
+    padding: 70px 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-top:3px solid black;
     border-bottom:3px solid black;
-    background: rgba(0, 0, 0, 0.247)
+    background-image: url('yoda.jpg');
+    background-position: center;
+    background-size: cover;
+     background-repeat: no-repeat;
+    background-attachment: fixed;
 
     
 }
@@ -28,6 +33,7 @@ h1 {
     flex-wrap: wrap;
     align-items: center;
     margin: 20px 0;
+    
 }
 .btn {
     width:100px;
